--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <div class="card-deck bg-primary">
+    <div class="card-deck ">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
